<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sudoku</string>
    
    <string name="action_settings">Settings</string>
    <string name="continue_label">Continue game</string>
    <string name="new_game_label">New Game</string>
    <string name="quit_label">Quit</string>
    <string name="about_label">About</string>
    
    <string name="name_of_the_game">Android Sudoku</string>
    <string name="about_title">About Android Sudoku</string>
    <string name="about_text">\
        Sudoku is a logic-based number placement puzzle. 
        Starting with partially completed 9x9 grid,the objective is to fill the 
        grid so that each row,each column, and each of the 3x3 boxes 
        (also called blocks) contains the digits 1 to 9 
        exactly done.</string>
    
    <string name="settings_label">Settings</string>
    <string name="settings_title">Sudoku settings</string>
    <string name="settings_shortcut">s</string>
    <string name="music_title">Music</string>
    <string name="music_summary">Play background music</string>
    <string name="hints_title">Hints</string>
    <string name="hints_summary">Show hints during play</string>
    
    <string name="new_game_title">Difficulty</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>
    
    <string name="game_title">Game</string>
	<string name="no_moves_label">No moves</string>
	<string name="keypad_title">Keypad</string>
	
</resources>
