<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="30dip"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="386dp"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/name_of_the_game"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/button1"
            android:background="@color/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:text="@string/continue_label" />

        <Button
            android:id="@+id/button2"
            android:background="@color/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:text="@string/new_game_label" />

        <Button
            android:id="@+id/button3"
            android:background="@color/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:text="@string/about_label" />

        <Button
            android:id="@+id/button4"
            android:background="@color/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quit_label" />

    </LinearLayout>

</LinearLayout>